--- a/recipes/simmered_fruit.html
+++ b/recipes/simmered_fruit.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Recipes</title>
+    <title>Simmered Fruit</title>
   </head>
   <body>
-    <h1>Breath of the Wind recipes</h1>
-
-    <a href="./recipes/simmered_fruit.html">Simmered Fruit</a>
+    <h1>Simmered Fruit</h1>
   </body>
 </html>
