Add recipe page content

--- a/recipes/simmered_fruit.html
+++ b/recipes/simmered_fruit.html
@@ -8,5 +8,40 @@
   </head>
   <body>
     <h1>Simmered Fruit</h1>
+
+    <img
+      src="../images/BotW_Simmered_Fruit_Icon.png"
+      alt="Simmered fruit from BOTW"
+    />
+
+    <h2>Description</h2>
+    <p>
+      Simmered Fruit is arguably the easiest dish to cook in the early game due
+      to the abundance of apples you'll end up having once you're done with the
+      Great Plateau.
+    </p>
+    <p>
+      Although you can simply use one apple to cook the dish, it's best to max
+      it out and use five apples. This will create a Simmered Fruit that
+      restores five hearts
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Fruit</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Gather the ingredients you need</li>
+      <li>
+        find a cooking pot, which can usually be found close to towns and
+        stables
+      </li>
+      <li>Go to your inventory to hold all the ingredients</li>
+      <li>
+        Get close to the cooking pot and press the A-button when the Cook option
+        appears
+      </li>
+    </ol>
   </body>
 </html>
