Add 2 new recipes, seperate into pages, and update index.html
I originally created one page with all the recipes but changed it to three seperate pages all link to from index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <h1>Breath of the Wind recipes</h1>
-
-    <a href="./recipes/simmered_fruit.html">Simmered Fruit</a>
+    <p>
+      <a href="./recipes/simmered_fruit.html">Simmered Fruit</a>
+    </p>
+    <p>
+      <a href="./recipes/meat_and_mushroom_skewer.html"
+        >Meat and Mushroom Skewer</a
+      >
+    </p>
+    <p>
+      <a href="./recipes/basic_meaty_rice_balls.html">Basic Meaty Rice Balls</a>
+    </p>
   </body>
 </html>
