--- a/recipes/basic_meaty_rice_balls.html
+++ b/recipes/basic_meaty_rice_balls.html
@@ -4,31 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simmered Fruit</title>
+    <title>Basic Meaty Rice Balls</title>
   </head>
   <body>
     <!-- Emmet code for each recipe
-        h1{Recipe}+img+h2{Description}+(p>lorem)*2+h2{Ingredients}+(ul>li{$})+h2{Steps}+ol>(li{$}*4)r -->
+        h1{Recipe}+img+h2{Description}+(p>lorem)*2+h2{Ingredients}+(ul>li{$})+h2{Steps}+ol>(li{$}*4) -->
 
-    <h1>Simmered Fruit</h1>
-    <img
-      src="../images/BotW_Simmered_Fruit_Icon.png"
-      alt="Simmered fruit from BOTW"
-    />
+    <h1>Basic Meaty Rice Balls</h1>
+    <img src="../images/BotW_Meaty_Rice_Balls_Icon.png" alt="" />
     <h2>Description</h2>
     <p>
-      Simmered Fruit is arguably the easiest dish to cook in the early game due
-      to the abundance of apples you'll end up having once you're done with the
-      Great Plateau.
+      Meaty Rice Balls are another good starting recipe. As with all meat
+      recipes, higher quality meat will result in more health restored!
     </p>
     <p>
-      Although you can simply use one apple to cook the dish, it's best to max
-      it out and use five apples. This will create a Simmered Fruit that
-      restores five hearts
+      It's also possible to add additional effects to the recupe. Adding a
+      Stamella Shroom to the recipe creates Energizing Meaty Rice Balls, which
+      also restores Link's Stamina Wheel!
     </p>
     <h2>Ingredients</h2>
     <ul>
-      <li>1st Ingredient: Fruit</li>
+      <li>1st Ingredient: Hylian Rice</li>
+      <li>2nd Ingredient: Meat</li>
     </ul>
     <h2>Steps</h2>
     <ol>
