Add image and 2nd header to index.html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Recipes</title>
+    <title>BOTW Recipes</title>
   </head>
   <body>
     <h1>Breath of the Wind recipes</h1>
+    <h2>Eat these to survive your first night!</h2>
+    <img
+      src="./images/dca45ox-31bed2cc-2d81-4fb0-80c8-655131b5d2e0.gif"
+      height="250"
+      alt=""
+    />
     <p>
       <a href="./recipes/simmered_fruit.html">Simmered Fruit</a>
     </p>
